[gd_scene load_steps=37 format=3 uid="uid://dbcxs61j1n4vp"]

[ext_resource type="Script" path="res://src/enemies/flying_enemy.gd" id="1_cghvn"]
[ext_resource type="Texture2D" uid="uid://dofpg2ecqd4m8" path="res://resources/Enemies/Flying_eye/Attack.png" id="2_j7b7f"]
[ext_resource type="Texture2D" uid="uid://ciplac5fkkdau" path="res://resources/Enemies/Flying_eye/Death.png" id="3_3kvqa"]
[ext_resource type="Texture2D" uid="uid://ciscv8mxewipp" path="res://resources/Enemies/Flying_eye/Flight.png" id="4_qfd64"]
[ext_resource type="Texture2D" uid="uid://c7ivswe7fmfqb" path="res://resources/Enemies/Flying_eye/Take Hit.png" id="5_2dtbr"]
[ext_resource type="PackedScene" uid="uid://12lmwy38utnt" path="res://src/enemies/hitbox.tscn" id="6_yxijt"]
[ext_resource type="AudioStream" uid="uid://bd08ujpgrgqro" path="res://resources/Sounds/fireball-whoosh.mp3" id="7_fnlks"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hj0hy"]
atlas = ExtResource("2_j7b7f")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlpfi"]
atlas = ExtResource("2_j7b7f")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tqaj"]
atlas = ExtResource("2_j7b7f")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rjh5"]
atlas = ExtResource("2_j7b7f")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipney"]
atlas = ExtResource("2_j7b7f")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8m1f3"]
atlas = ExtResource("2_j7b7f")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_d13hv"]
atlas = ExtResource("2_j7b7f")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyblv"]
atlas = ExtResource("2_j7b7f")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8jih"]
atlas = ExtResource("3_3kvqa")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_po54e"]
atlas = ExtResource("3_3kvqa")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecwbn"]
atlas = ExtResource("3_3kvqa")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_otu6b"]
atlas = ExtResource("3_3kvqa")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ripxw"]
atlas = ExtResource("4_qfd64")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvbil"]
atlas = ExtResource("4_qfd64")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2hx4"]
atlas = ExtResource("4_qfd64")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfo6g"]
atlas = ExtResource("4_qfd64")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_60u14"]
atlas = ExtResource("4_qfd64")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_il2ul"]
atlas = ExtResource("4_qfd64")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdawy"]
atlas = ExtResource("4_qfd64")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7jwa"]
atlas = ExtResource("4_qfd64")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tjlg"]
atlas = ExtResource("5_2dtbr")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_cofhx"]
atlas = ExtResource("5_2dtbr")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbu45"]
atlas = ExtResource("5_2dtbr")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8e8sf"]
atlas = ExtResource("5_2dtbr")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_x2emf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj0hy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlpfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tqaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rjh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipney")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8m1f3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d13hv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyblv")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8jih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_po54e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecwbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otu6b")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ripxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvbil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2hx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfo6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60u14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_il2ul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdawy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7jwa")
}],
"loop": true,
"name": &"fly",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tjlg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cofhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbu45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8e8sf")
}],
"loop": false,
"name": &"take_hit",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_sf6da"]
radius = 12.0

[sub_resource type="Animation" id="Animation_gw56t"]
resource_name = "FollowPath"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_la22y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xur3y"]
_data = {
"FollowPath": SubResource("Animation_gw56t"),
"RESET": SubResource("Animation_la22y")
}

[node name="FlyingEnemy" type="Path2D"]
script = ExtResource("1_cghvn")

[node name="PathFollow2D" type="PathFollow2D" parent="."]
rotates = false

[node name="Enemy" type="Node2D" parent="PathFollow2D"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PathFollow2D/Enemy"]
position = Vector2(-5, -3)
sprite_frames = SubResource("SpriteFrames_x2emf")
animation = &"attack"

[node name="Hitbox" parent="PathFollow2D/Enemy" instance=ExtResource("6_yxijt")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/Enemy/Hitbox"]
position = Vector2(-1, -1)
shape = SubResource("CircleShape2D_sf6da")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "FollowPath"
libraries = {
"": SubResource("AnimationLibrary_xur3y")
}

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="FireballSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_fnlks")

[connection signal="animation_finished" from="PathFollow2D/Enemy/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="PathFollow2D/Enemy/Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
